Current Version
---------------

Tue Aug 15 00:10:17 UTC 2000
sms:
- Fixed uninitialized variable in nlupdate.c (could cause nlupdate not to find 
  any full update)

Fr  11 Aug 2000 01:20:41 CEST
tobi:
- New nodelist format: Points4D. For 4D pointlists (with "Boss" entries etc.)

Thu Aug 10 14:25:40 MEZ 2000
tobi:
- Relaxed the checking of the nodelist header line to allow non-conforming
  nodelists (like the wipost pointlist, etc. pp.) to pass.
- Bugfixes for the previous checkin.

Thu Aug 10 13:24:07 MEZ 2000
tobi:
- New feature: previously, you needed to unpack the first instance of a
  nodelist manually into the nodelist directory, before nlupdate could find
  updates for it. Now, if there is a FullUpdate configured, nlupdate will use
  the most recent full update file to create the instance of the nodelist if
  none is present.

Thu Aug 10 13:01:49 MEST 2000
tobi (migrated from stable):
- fixed possible core dump on unusual error situations

Thu Aug 10 12:33:31 MEZ 2000
tobi (migrated from stable):
- fixed logfile entry for failed fullupdate attempt

Mon Aug  7 00:55:28 GMT 2000
tobi:
- fixed superfluous empty lines in log file
- adaptions for BeOS                    

NLTOOLS-1.1
-----------
(forked off for release in July 2000)
	
Fr  14 Jul 2000 01:00:27 CEST
tobi:
- final cleanups before the release

Wed May 17 22:14:00 UTC 2000
sms:
- added smapi to Makefile
 
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
- MS Visual C porting

Thu Mar 23 10:15:52 MSK 2000
max (patch from Serguei Revtov):
- change Win makefile to compile with new includes

Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
- change legacy SUN makefile to compile with new includes, simplifying

Mo   7 Feb 2000 00:07:24 CET
tobi:
- Nodediff and -list update files were not rejected if they contained an
  invalid header line (even though this invalid line was detected).

So   2 Jan 2000 11:28:26 CET
tobi: